src/objects/Pinnovate_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Background_Color__c</fullName>
        <inlineHelpText>This needs to be a hex colour code e.g. #000000 or a internet recognised colour such as the word Black</inlineHelpText>
        <label>Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Image__c</fullName>
        <inlineHelpText>Add a URL of the image you want to use as a tiled background. Alternatively click &apos;Show Feed&apos; above and upload the image and comment #setbackground.</inlineHelpText>
        <label>Background Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Background_Preview__c</fullName>
        <formula>IMAGE( Background_Image__c , &apos;background&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Banner__c</fullName>
        <inlineHelpText>Add a URL of the image you want to use as a header. Alternatively click &apos;Show Feed&apos; above and upload the image and comment #setheader. Ideal image size width 850px height 175px.</inlineHelpText>
        <label>Header Banner</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Header_Preview__c</fullName>
        <formula>IMAGE( Header_Banner__c, &apos;header&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Pinnovate_Preference__c</fullName>
        <formula>&apos;/&apos; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Pinnovate Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Pinnovate_Wall__c</fullName>
        <formula>&apos;/apex/Pinnovate?id=&apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Pinnovate Wall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pinnovate_Wall__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Pinnovate?id=&apos;&amp;Name, &apos;Pinnovate Wall&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pinnovate Wall</label>
        <type>Text</type>
    </fields>
    <label>Pinnovate Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Open_Pinnovate_Preference__c</columns>
        <columns>Open_Pinnovate_Wall__c</columns>
        <columns>Pinnovate_Wall__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Background_Color__c</columns>
        <columns>Background_Image__c</columns>
        <columns>Background_Preview__c</columns>
        <columns>Header_Banner__c</columns>
        <columns>Header_Preview__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pinnovate ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pinnovate Preferences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>